# EmpresaVendeMas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Clientes/: Clientes.cpp  Clientes.h
Controller/: CategoriaController.cpp  ClienteController.cpp  ClienteController.h  DetalleVentaController.cpp  ProductoController.cpp  ProductoController.h  VendedorController.cpp  VendedorController.h  VentaController.cpp
Controller/Login/: Login.cpp  Login.h  Menu.cpp
Controller/Ventas/: Venta.h
Model/: Categoria.cpp  Cliente.cpp  DetalleVenta.cpp  Producto.cpp  Venta.cpp
Model/Clientes/: Cliente.cpp  Cliente.h
Model/Productos/: Producto.cpp  Producto.h
Model/Vendedores/: Vendedor.cpp  Vendedor.h
Model/Ventas/: Venta.cpp
